feat(server): #298 postgres 18 oauth support  (#349)
* chore: #298 initial setup and wip

* feat(server): #298 initial oauth handler

* chore(server): #298 added basic data structs for implementation

* fix(server): #298 updated error enums for oauth

* feat(server): #298 handled discovery connection

* feat(server): #268 parsed key value pairs and auth key

* feat(server): #298 initial completion of feature

* refactor(server): #268 restructured code flow to prevent moving msg

* test(server): #298 addded test cases

* fix(server): #298 fixed linting errors

* feat(app): fix

* chore(server): #298 added basic example

* test(server): #298 oauth testing

* fix(server): #298 empty auth field should trigger challenge

* fix(server): #298 fixed wrong error states

* test(server): #298 added example using keycloak oauth

* fix(server): #298 fixed validation happy path

* fix(server): #298 removed debug statements

* chore(server): #298 keycloak example setup

* chore(server): #298 completed keycloak auth example

* fix(server): #298 fixed audience validation error

* chore: fixed typo

Co-authored-by: Ning Sun <classicning@gmail.com>

* fix(server): #298 pr fixes

* ci(server): #298 fixed breaking lints

* fix(shared): #298 fixed reordering and cargo example features

---------

Co-authored-by: Ning Sun <classicning@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,6 +82,7 @@ server-api = [
   "dep:md5",
   "dep:hex",
   "dep:postgres-types",
+  "dep:serde_json"
 ]
 server-api-ring = ["server-api", "_ring"]
 server-api-aws-lc-rs = ["server-api", "_aws-lc-rs"]
@@ -121,6 +122,11 @@ gluesql = { version = "0.18", default-features = false, features = [
   "gluesql_memory_storage",
 ] }
 
+## oauth
+jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
+rsa = { version = "0.9" }
+reqwest = { version = "0.12", features = ["json"] }
+
 [patch.crates-io]
 pgwire = { path = "." }
 
@@ -157,6 +163,14 @@ required-features = ["server-api-aws-lc-rs"]
 
 [[example]]
 name = "scram"
+required-features = ["server-api-aws-lc-rs"]
+
+[[example]]
+name = "oauth"
+required-features = ["server-api-aws-lc-rs"]
+
+[[example]]
+name = "keycloak_oauth"
 required-features = ["server-api-aws-lc-rs"]
 
 [[example]]
