--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,12 @@ ring = { version = "0.17", optional = true }
 aws-lc-rs = { version = "1.7", optional = true }
 stringprep = { version = "0.1.2", optional = true }
 x509-certificate = { version = "0.25", optional = true }
+
+## oauth
+jsonwebtoken = { version = "10", features = ["aws_lc_rs"], optional = true }
+rsa = { version = "0.9", optional = true }
+reqwest = { version = "0.12", features = ["json"], optional = true }
+
 ## types
 postgres-types = { version = "0.2", features = ["array-impls"], optional = true }
 chrono = { version = "0.4", features = ["std"], optional = true }
@@ -85,7 +91,7 @@ server-api = [
   "dep:serde_json"
 ]
 server-api-ring = ["server-api", "_ring"]
-server-api-aws-lc-rs = ["server-api", "_aws-lc-rs"]
+server-api-aws-lc-rs = ["server-api", "_aws-lc-rs", "oauth"]
 client-api = [
   "dep:percent-encoding",
   "dep:pin-project",
@@ -100,6 +106,7 @@ client-api-aws-lc-rs = ["client-api", "_aws-lc-rs", "dep:rustls-pki-types"]
 pg-type-chrono = ["dep:chrono", "postgres-types/with-chrono-0_4"]
 pg-type-rust-decimal = ["dep:rust_decimal"]
 pg-type-serde-json = ["dep:serde", "dep:serde_json", "postgres-types/with-serde_json-1"]
+oauth = ["dep:reqwest", "dep:jsonwebtoken", "dep:rsa"]
 _sqlite = []
 _bundled = ["rusqlite/bundled"]
 
