perf: reduce allocations in ToSqlText impls
- use `SmolStr` for temporary string buffers
- avoid `to_string()` calls by formatting values directly into the output
  buffer using `write!` macro

According to heaptrack, the number of allocations in examples/bench
decreased by 3 times:

master (2fbb783):

```bash
heaptrack stats:
        allocations:            30056736
        leaked allocations:     0
        temporary allocations:  9255417
```

this commit:

```bash
heaptrack stats:
        allocations:            10056736
        leaked allocations:     0
        temporary allocations:  2534729
```

Pgbench command:

```bash
pgbench \
  -f pgbench/select.sql \
  -c 10 \
  -t 100 \
  -h 127.0.0.1 \
  -p 5433 \
  -U postgres \
  -d postgres \
  --no-vacuum \
  --progress 1
```

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ rust-version = "1.89"
 derive-new = "0.7"
 bytes = "1.1.0"
 thiserror = "2"
+smol_str = "0.3.2"
 ## api
 tokio = { version = "1.19", features = [
   "net",
