Avoid unnecessary allocations in rows encoding (#366)
* cargo.toml: update rust-versrion to 1.89

* perf: reduce allocations in ToSqlText impls

- use `SmolStr` for temporary string buffers
- avoid `to_string()` calls by formatting values directly into the output
  buffer using `write!` macro

According to heaptrack, the number of allocations in examples/bench
decreased by 3 times:

master (2fbb783):

```bash
heaptrack stats:
        allocations:            30056736
        leaked allocations:     0
        temporary allocations:  9255417
```

this commit:

```bash
heaptrack stats:
        allocations:            10056736
        leaked allocations:     0
        temporary allocations:  2534729
```

Pgbench command:

```bash
pgbench \
  -f pgbench/select.sql \
  -c 10 \
  -t 100 \
  -h 127.0.0.1 \
  -p 5433 \
  -U postgres \
  -d postgres \
  --no-vacuum \
  --progress 1
```

* perf: introduce `DataRowEncoder::take_row` method for inner buffer reuse

New method allows to split the inner buffer and reuse it for encoding
the next data row.

According to heaptrack, the number of allocations in examples/bench
decreased by ~165 times:

previous commit:

```bash
heaptrack stats:
        allocations:            10056736
        leaked allocations:     0
        temporary allocations:  2534729
```

this commit:

```bash
heaptrack stats:
        allocations:            60736
        leaked allocations:     0
        temporary allocations:  975
```

Pgbench command:

```bash
pgbench \
  -f pgbench/select.sql \
  -c 10 \
  -t 100 \
  -h 127.0.0.1 \
  -p 5433 \
  -U postgres \
  -d postgres \
  --no-vacuum \
  --progress 1
```

* chore: don't allocate `Arc<FormatOptions>` in `FieldInfo::new`

Instead of creating a new `Arc<FormatOptions>` with default values each time
when field info is created, we now clone a shared default instance.

According to heaptrack, the number of allocations in examples/bench
decreased by ~2 times:

previous commit:

```bash
heaptrack stats:
        a

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,13 @@ homepage = "https://github.com/sunng87/pgwire"
 repository = "https://github.com/sunng87/pgwire"
 documentation = "https://docs.rs/crate/pgwire/"
 readme = "README.md"
-rust-version = "1.85"
+rust-version = "1.89"
 
 [dependencies]
 derive-new = "0.7"
 bytes = "1.1.0"
 thiserror = "2"
+smol_str = "0.3.2"
 ## api
 tokio = { version = "1.19", features = [
   "net",
