--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,8 @@ serde = { version = "1", optional = true }
 serde_json = { version = "1", optional = true }
 lazy-regex = { version = "3.3", default-features = false, features = ["lite"] }
 ryu = "1"
+postgis = { version = "0.9" }
+
 ## config
 percent-encoding = { version = "2.0", optional = true }
 
