--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,7 +58,7 @@ serde = { version = "1", optional = true }
 serde_json = { version = "1", optional = true }
 lazy-regex = { version = "3.3", default-features = false, features = ["lite"] }
 ryu = "1"
-postgis = { version = "0.9" }
+postgis = { version = "0.9", optional = true }
 
 ## config
 percent-encoding = { version = "2.0", optional = true }
@@ -116,6 +116,7 @@ client-api-aws-lc-rs = ["client-api", "_aws-lc-rs", "dep:rustls-pki-types"]
 pg-type-chrono = ["dep:chrono", "postgres-types/with-chrono-0_4"]
 pg-type-rust-decimal = ["dep:rust_decimal"]
 pg-type-serde-json = ["dep:serde", "dep:serde_json", "postgres-types/with-serde_json-1"]
+pg-type-postgis = ["dep:postgis"]
 _sqlite = []
 _bundled = ["rusqlite/bundled"]
 
