--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,7 +56,7 @@ chrono = { version = "0.4", features = ["std"], optional = true }
 rust_decimal = { version = "1.35", features = ["db-postgres"], optional = true }
 serde = { version = "1", optional = true }
 serde_json = { version = "1", optional = true }
-pg_interval = { version = "0.4", optional = true }
+pg_interval = { version = "0.5.1", package = "pg_interval_2", optional = true }
 lazy-regex = { version = "3.3", default-features = false, features = ["lite"] }
 ryu = "1"
 ## config
