--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,18 +75,8 @@ jobs:
     needs: [test]
     steps:
     - uses: actions/checkout@v4
-    - uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-        override: true
-    - run: |
-        pip install psycopg
-        pip install psycopg2
-    - uses: turtlequeue/setup-babashka@v1.5.0
-      with:
-        babashka-version: 1.1.173
-    - uses: jbangdev/setup-jbang@main
-    - run: ./tests-integration/test.sh
+    - uses: cachix/install-nix-action@v31
+    - run: nix develop --command ./tests-integration/test.sh
 
   msrv:
     name: MSRV
