--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,9 +74,11 @@ jobs:
     timeout-minutes: 15
     needs: [test]
     steps:
-    - uses: actions/checkout@v4
-    - uses: cachix/install-nix-action@v31
-    - run: nix develop --command bash -c './tests-integration/test.sh'
+    - uses: actions/checkout@v6
+    - uses: DeterminateSystems/nix-installer-action@main
+    - uses: DeterminateSystems/magic-nix-cache-action@main
+    - uses: nicknovitski/nix-develop@v1
+    - run: ./tests-integration/test.sh
 
   msrv:
     name: MSRV
