test: add a libpq test client in integration tests (#390)
* test: add a libpq test client in integration tests

* test: use nix environment to run ci

* fix: attemp to nix environment

* ci: update how we setup nix

* chore: try to include openssl in flake

* chore: try to figure out the minimal configuration for openssl

* chore: revert changes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,18 +74,10 @@ jobs:
     timeout-minutes: 15
     needs: [test]
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-        override: true
-    - run: |
-        pip install psycopg
-        pip install psycopg2
-    - uses: turtlequeue/setup-babashka@v1.5.0
-      with:
-        babashka-version: 1.1.173
-    - uses: jbangdev/setup-jbang@main
+    - uses: actions/checkout@v6
+    - uses: DeterminateSystems/nix-installer-action@main
+    - uses: DeterminateSystems/magic-nix-cache-action@main
+    - uses: nicknovitski/nix-develop@v1
     - run: ./tests-integration/test.sh
 
   msrv:
